# xwidl-engine

./: LICENSE  prelude.dfy  prelude.idl  stack.yaml  xwidl-engine.cabal
examples/ex-1/: Main.hs  out.dfy  spec.idl
examples/ex-2/: Main.hs  out.dafny  spec.idl
examples/ex-3/: Main.hs  out.dafny  spec.idl
src/: Command.hs  Dafny.hs  Drive.hs  Main.hs  Model.hs  Server.hs  Session.hs  Spec.hs  State.hs  Translate.hs  Type.hs  Util.hs  WebIDL.hs
src/Language/Dafny/: AST.hs  Translate.hs
src/Language/XWIDL/: Spec.hs  WebIDL.hs
