name:                xwidl-engine
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
author:              Zhen Zhang
maintainer:          izgzhen@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Model
                       Session
                       State
                       Util
                       Type
                       Language.Dafny.AST
                       Language.Dafny.Translate
                       Language.XWIDL.Spec
                       Language.XWIDL.WebIDL
  default-extensions:  RecordWildCards, LambdaCase, FlexibleContexts, TupleSections
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10, containers >=0.5 && <0.6,
                       mtl >=2.2 && <2.3, wl-pprint, free, js-bridge,
                       aeson, network-simple, network, bytestring,
                       language-webidl >=0.1.4.0 && <0.1.5.0,
                       MissingH, dafny-bridge, atomic-primops, transformers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-orphans

executable server
  main-is:             src/Main.hs
--  other-modules:
  build-depends:       base >=4.9 && <4.10, xwidl-engine
  default-language:    Haskell2010
